[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/help.png" type="Texture" id=1]
[ext_resource path="res://assets/play.png" type="Texture" id=2]
[ext_resource path="res://assets/load.png" type="Texture" id=3]
[ext_resource path="res://assets/save.png" type="Texture" id=4]
[ext_resource path="res://assets/library.png" type="Texture" id=5]
[ext_resource path="res://Buttons2.gd" type="Script" id=6]

[node name="Buttons2" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -1530.0
margin_bottom = -1006.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 10
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="TextureButton" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Load"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )

[node name="Save" type="TextureButton" parent="."]
margin_left = 74.0
margin_right = 138.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Save"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 4 )

[node name="Play" type="TextureButton" parent="."]
margin_left = 148.0
margin_right = 212.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Play"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 2 )

[node name="Library" type="TextureButton" parent="."]
margin_left = 222.0
margin_right = 286.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Library"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 5 )

[node name="Help" type="TextureButton" parent="."]
margin_left = 296.0
margin_right = 360.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Help"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
[connection signal="button_down" from="Load" to="." method="_on_Load_button_down"]
[connection signal="button_down" from="Save" to="." method="_on_Save_button_down"]
[connection signal="button_down" from="Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="Library" to="." method="_on_Library_button_down"]
[connection signal="button_down" from="Help" to="." method="_on_Help_button_down"]
